[ADD]  add install etcd-proxy 、node 、kubelet

--- a/install/salt/etcd/install/systemd/etcd-proxy.service
+++ b/install/salt/etcd/install/systemd/etcd-proxy.service
@@ -7,7 +7,7 @@ User=root
 EnvironmentFile={{ pillar['rbd-path'] }}/etc/envs/petcd.sh
 PermissionsStartOnly=true
 ExecStartPre=-/usr/bin/docker rm -f etcd-proxy
-ExecStart={{ pillar['rbd-path'] }}/petcd/scripts/start.sh
+ExecStart={{ pillar['rbd-path'] }}/petcd/scripts/start-proxy.sh
 ExecStop=-/usr/bin/docker stop etcd-proxy
 Restart=always
 RestartSec=10
